cmake_minimum_required(VERSION 3.19)
project(BinaryTreeAndRecursion)

set(CMAKE_CXX_STANDARD 14)

add_executable(BinaryTreeAndRecursion main.cpp Maximum-Depth-of-Binary-Tree.h Binary-Tree-and-RecursionHelper.h Invert-Binary-Tree.h Path-Sum.h Binary-Tree-Paths.h Path-Sum-III.h Lowest-Common-Ancestor-of-a-Binary-Search-Tree.h)