cmake_minimum_required(VERSION 3.19)
project(DynamicProgramming)

set(CMAKE_CXX_STANDARD 14)

add_executable(DynamicProgramming main.cpp Fibonacci.h Climbing-Stairs.h Integer-Break.h House-Robber.h 0-1-knapsack.h 0-1-knapsack-optimized.h Partition-Equal-Subset-Sum.h Longest-Increasing-Subsequence.h Longest-Common-Subsequence.h Optional-01-More-about-Fibonacci.h Optional-02-More-about-LIS.h)