cmake_minimum_required(VERSION 3.19)
project(StackAndQueue)

set(CMAKE_CXX_STANDARD 14)

add_executable(StackAndQueue main.cpp Valid-Parentheses.h Recursion-and-Stack.h StackQueueHelper.h Non-Recursive-Implementation-of-a-Recursive-Algorithm.h Binary-Tree-Level-Order-Traversal.h Perfect-Squares.h Priority-Queue.h Top-K-Frequent-Elements.h Optional-01-Classic-Non-Recursive-Preorder-Traversal.h Optional-02-Classic-Non-Recursive-Inorder-Traversal.h Optional-03-Classic-Non-Recursive-Postorder-Traversal.h Optional-04-Binary-Tree-Morris-Traversal.h Optional-05-Word-Ladder.h)