cmake_minimum_required(VERSION 3.19)
project(UsingHashTable)

set(CMAKE_CXX_STANDARD 14)

add_executable(UsingHashTable main.cpp Intersection-of-Two-Arrays.h Intersection-of-Two-Arrays-II.h basic-map.h More-About-Set-And-Map.h Two-Sum.h 4Sum-II.h Number-of-Boomerangs.h Contains-Duplicate-II.h Contains-Duplicate-III.h test.h)